# AI-Tasks

./: .gitattributes  .gitignore  README.md  resultados.csv
algoritmosGeneticos/: algoritmosGeneticos.sln  main.cpp
algoritmosGeneticos/algoritmosGeneticos/: algoritmosGeneticos.cpp  algoritmosGeneticos.vcxproj  algoritmosGeneticos.vcxproj.filters  ejecutar_py.bat  graficar.py  resultados.csv
checkers/: README.md  checkers.sln  main.cpp
checkers/checkers/: CBoard.h  CGraphics.h  CTree.h  Makefile  checkers  checkers.vcxproj  checkers.vcxproj.filters  linux.cpp  main.cpp
graph_coloring/: README.md  coloreo.h  graph_coloring.sln
graph_coloring/graph_coloring/: CColoring.h  CGraph.h  CGraphics.h  graph_coloring.vcxproj  graph_coloring.vcxproj.filters  main.cpp
graph_pathfinding/: Busquedas.sln  Busquedas.vcxproj  Busquedas.vcxproj.filters  README.md  graph.hpp  graph_pathfinding.sln  heuristicsrch.hpp  main.cpp
graph_pathfinding/graph_pathfinding/: blind_search.h  graph.h  graph_pathfinding.vcxproj  graph_pathfinding.vcxproj.filters  heuristic_search.h  main.cpp  search_result.h  (+1 more)
perceptron/: README.md  perceptron.sln
perceptron_mlp/: CMakeLists.txt  Makefile  README.md
perceptron_mlp/scripts/: download_cifar.sh
perceptron_mlp/src/: cifar10_reader.h  main.cu  perceptron_mlp.h
perceptron_mlp/src/layers/: activation.cu  activation.h  dense_layer.cu  dense_layer.h
perceptron_mlp/src/losses/: softmax_loss.cu  softmax_loss.h
perceptron_mlp/src/tests/: test_backward.cpp  test_forward.cpp
perceptron_mlp/src/utils/: cuda_utils.h  rng_utils.h
(+8 files in other folders)
